--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body {
 
 .tracking-card {
     background-color: var(--dark_blue);
+    height: 100%;
     padding: 1.25rem; 
     border-radius: 20px; 
     position: relative; 
@@ -186,4 +187,51 @@ body {
 
 .dashboard__item:hover .tracking-card {
     background-color: var(--desatureted_blue);
+}
+
+@media (min-width: 1024px) {
+    .dashboard__content {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .dashboard__person { 
+        height: 100%;
+        grid-row: 1/3; 
+        grid-column: 1/2;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .info-card { 
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-grow: 1;
+    }
+
+    .info-card__photo {
+        margin-bottom: 1.5rem;
+    }
+
+    .info-card__title {
+        font-size: 32px;
+    }
+    .view-selector {
+        flex-direction: column;
+    }
+
+    .view-selector__item:not(:last-child) {
+        margin-bottom: 1rem;
+    }
+
+    .tracking-card__body {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .tracking-card__time {
+        font-size: 32px;
+    }
+
+    
 }
